--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-wip
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Igor Novakovic</title>
+</head>
+<body>
+    <h2>wip</h2>
+</body>
+</html>
