--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/styles.css">
+    <link rel="icon" href="assets/images/in.svg">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&display=swap" rel="stylesheet">
     <title>Igor Novakovic</title>
 </head>
 <body>
-    <h2>wip</h2>
+    <section>
+        <p>Currently under construction.</p>
+    </section>
 </body>
 </html>
